# roughenough-fuzz

./: Cargo.toml  README.md  dictionary.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
in/: draft-05-request.1  draft-05-request.2  draft-05-response.1  draft-05-response.2
src/: afl_envelope_target.rs  afl_server_target.rs  afl_target.rs  hfuzz_target.rs  main.rs
