[package]
name = "roughenough-fuzz"
version = "0.1.0"
repository = "https://github.com/int08h/roughenough-fuzz"
authors = ["Stuart Stock <stuart@int08h.com>"]
license = "Apache-2.0"
description = "Fuzzing for Roughenough: a Rust implementation of the Roughtime secure time sync protocol"
readme = "README.md"
keywords = ["roughtime", "afl", "fuzzing"]

[dependencies]
afl = "0.3"
honggfuzz = "0.5"
roughenough = { git = "https://github.com/int08h/roughenough", branch = "master" }

[[bin]]
name = "hfuzz_target"
path = "src/hfuzz_target.rs"
