[package]
name = "roughenough-fuzz"
version = "0.2.0"
repository = "https://github.com/int08h/roughenough-fuzz"
authors = ["Stuart Stock <stuart@int08h.com>"]
license = "Apache-2.0"
description = "Fuzzing for Roughenough: a Rust implementation of the Roughtime secure time sync protocol"
readme = "README.md"
keywords = ["roughtime", "afl", "fuzzing"]

[dependencies]
afl = "0.4"
honggfuzz = "0.5"
log = "0.4"
simple_logger = "0.5"
mio = "0.6"
hex = "*"
roughenough = "1.1"

[[bin]]
name = "hfuzz_target"
path = "src/hfuzz_target.rs"

[[bin]]
name = "afl_target"
path = "src/afl_target.rs"

[[bin]]
name = "afl_server_target"
path = "src/afl_server_target.rs"

[[bin]]
name = "afl_envelope_target"
path = "src/afl_envelope_target.rs"
